--- a/public/assets/css/invoice.css
+++ b/public/assets/css/invoice.css
@@ -1,5 +1,5 @@
 .invoice-wrapper {
-    max-width: 900px;
+    width: 800px;
     margin: 50px auto;
     padding: 40px;
     border: 1px solid #ddd;
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .invoice-header .logo img {
@@ -32,7 +32,7 @@
 .invoice-parties {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .invoice-parties div h3 {
